--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Build
-        run: |
-          npm run build
-          cd dist/
+        run: npm run build
       - uses: primer/publish@master
+        working_directory:
         env:
           GITHUB_TOKEN: $GITHUB_TOKEN
           NPM_AUTH_TOKEN: $NPM_TOKEN
+          args: "--dir=dist"
