--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
+          cat ./dist/package.json
       - uses: primer/publish@master
         env:
           GITHUB_TOKEN: $GITHUB_TOKEN
