--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,8 @@ jobs:
           npm run build
           cat ./dist/package.json
       - uses: primer/publish@master
-        args: "--dir=dist"
+        with:
+          args: "--dir=dist"
         env:
           GITHUB_TOKEN: $GITHUB_TOKEN
           NPM_AUTH_TOKEN: $NPM_TOKEN
