--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           npm run build
           cat ./dist/package.json
-      - uses: primer/publish@master
+      - uses: primer/publish@v2
         with:
           args: "--dir=dist"
         env:
