--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - master
 
-env:
-  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-
 jobs:
   publish:
     name: Publish
@@ -28,5 +24,5 @@ jobs:
         with:
           args: "--dir=dist"
         env:
-          GITHUB_TOKEN: $GITHUB_TOKEN
-          NPM_AUTH_TOKEN: $NPM_TOKEN
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
