--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "build": "stencil build --docs",
+    "build.worker": "cd engine && webpack ",
     "postbuild": "node ./postbuild.js --patch $(git rev-list --count HEAD)",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
@@ -24,10 +25,13 @@
     "generate": "stencil generate"
   },
   "devDependencies": {
-    "@stencil/core": "^1.3.3",
+    "@stencil/core": "^1.9.0-12",
     "@stencil/sass": "^1.1.1",
     "fs-extra": "^8.1.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "license": "MIT",
   "dependencies": {
